--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ rvm:
   - 2.3.0
 services:
   - postgresql
+install:
+  - gem install bundler
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
