--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,6 @@ services:
   - postgresql
 install:
   - gem install bundler
+  - bundle install
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
